# beamr

./: .commit-msg.tmp  .gitignore  B-028b-SUMMARY.md  B-031-SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.toml  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  gates.json
.benchmark/: brief-resolved.json  dev-output.json  dev-prompt.md  review-output-1.json  review-prompt.md  scout-output.json  scout-prompt.md
.claude/: settings.local.json
.github/workflows/: cooperative-wasm.yml
conformance/: .gitignore  README.md  driver.mjs
conformance/page/: page.mjs  worker-leg.mjs  workload-runner.mjs
conformance/workload/: wport9_conformance.beam  wport9_conformance.erl
crates/beamr/: Cargo.toml
crates/beamr-cli/: Cargo.toml
crates/beamr-wasm/: Cargo.toml  build.rs
crates/gleam-types/: Cargo.toml
docs/: ACTOR-MIGRATION-PLAN.md  CONN-EVENTS-HOOK-SPEC.md  DIST-CONTROL-WIRE-SPEC.md  DOCUMENTATION.md  EMBEDDER-COMPOSITION-SPEC.md  READINESS-CONTRACT-SPEC.md  READINESS-REGISTRATION-API.md  REVIEW-23-07.md  VISUAL-CONTENT.md  WASM-RUNTIME-PORT-DESIGN.md  etf-hardening-findings.md
docs/adr/: 012-must-deliver-control-lane.md  README.md
docs/design/beamr/briefs/evidence/aion-encode-gc-defect/repro/green/: Cargo.toml
docs/design/beamr/briefs/evidence/aion-encode-gc-defect/repro/green/src/: main.rs
docs/design/beamr/briefs/evidence/aion-encode-gc-defect/repro/red/: Cargo.toml
docs/design/beamr/briefs/evidence/aion-encode-gc-defect/repro/red/src/: main.rs
docs/notes/: osiris-compact-anchor.md
docs/stack-review/: README.md  (+6 more)
gate-logs/: report.json
(+609 files in other folders)
